--- a/งานหุ้มฉนวน.html
+++ b/งานหุ้มฉนวน.html
@@ -335,7 +335,7 @@
 
                         <div class="card3 ">
                             <div class="img ">
-                                <a href="isowool.html">
+                                <a href="isowool.htm">
                                     <img src="iso.png" alt=" "></a>
                             </div>
                             <div class="top-text ">
@@ -351,7 +351,7 @@
 
                         <div class="card3 ">
                             <div class="img ">
-                                <a href="rockwool.html">
+                                <a href="rockwool.htm">
                                     <img src="rockwool.png" alt=" "></a>
                             </div>
                             <div class="top-text ">
@@ -367,7 +367,7 @@
 
                         <div class="card3 ">
                             <div class="img ">
-                                <a href="rockfiber.html">
+                                <a href="rockfiber.htm">
                                     <img src="rockfiber.png" alt=" "></a>
                             </div>
                             <div class="top-text ">
@@ -385,7 +385,7 @@
 
                         <div class="card3 ">
                             <div class="img ">
-                                <a href="finisingcement.html">
+                                <a href="finisingcement.htm">
                                     <img src="cement.png" alt=" "></a>
                             </div>
                             <div class="top-text ">
@@ -400,7 +400,7 @@
 
                         <div class="card3 ">
                             <div class="img ">
-                                <a href="cladding.html">
+                                <a href="cladding.htm">
                                     <img src="cladding.png" alt=" "></a>
                             </div>
                             <div class="top-text ">
@@ -415,7 +415,7 @@
 
                         <div class="card3 ">
                             <div class="img ">
-                                <a href="fiberglass.html">
+                                <a href="fiberglass.htm">
                                     <img src="tape.png" alt=" "></a>
                             </div>
                             <div class="top-text ">
@@ -430,7 +430,7 @@
 
                         <div class="card3 ">
                             <div class="img ">
-                                <a href="rope.html">
+                                <a href="rope.htm">
                                     <img src="rope.png" alt=" "></a>
                             </div>
                             <div class="top-text ">
